@@ -25,12 +25,12 @@ import com.jayway.jsonpath.spi.mapper.MappingProvider;
 import java.io.IOException;
 import java.net.MalformedURLException;
 import java.nio.ByteBuffer;
+import java.nio.charset.StandardCharsets;
 import java.nio.file.Path;
 import java.util.List;
 import java.util.Map;
 import java.util.zip.ZipEntry;
 import java.util.zip.ZipFile;
-import org.apache.commons.io.IOUtils;
 import org.apache.http.HttpResponse;
 import org.apache.http.client.HttpClient;
 import org.apache.http.client.methods.HttpGet;
@@ -132,7 +132,7 @@ public class PackageUtils {
       try (ZipFile zipFile = new ZipFile(jarfile.toFile())) {
         ZipEntry entry = zipFile.getEntry(filename);
         if (entry == null) continue;
-        return IOUtils.toString(zipFile.getInputStream(entry), "UTF-8");
+        return new String(zipFile.getInputStream(entry).readAllBytes(), StandardCharsets.UTF_8);
       } catch (Exception ex) {
         throw new SolrException(ErrorCode.BAD_REQUEST, ex);
       }
@@ -149,7 +149,7 @@ public class PackageUtils {
             ErrorCode.NOT_FOUND,
             "Error (code=" + resp.getStatusLine().getStatusCode() + ") fetching from URL: " + url);
       }
-      return IOUtils.toString(resp.getEntity().getContent(), "UTF-8");
+      return new String(resp.getEntity().getContent().readAllBytes(), StandardCharsets.UTF_8);
     } catch (UnsupportedOperationException | IOException e) {
       throw new RuntimeException(e);
     }
@@ -195,18 +195,19 @@ public class PackageUtils {
 
     if (str == null) return null;
     if (defaults != null) {
-      for (String param : defaults.keySet()) {
+      for (Map.Entry<String, String> entry : defaults.entrySet()) {
+        String param = entry.getKey();
         str =
-            str.replaceAll(
-                "\\$\\{" + param + "\\}",
-                overrides.containsKey(param) ? overrides.get(param) : defaults.get(param));
+            str.replace(
+                "${" + param + "}",
+                overrides.containsKey(param) ? overrides.get(param) : entry.getValue());
       }
     }
-    for (String param : overrides.keySet()) {
-      str = str.replaceAll("\\$\\{" + param + "\\}", overrides.get(param));
+    for (Map.Entry<String, String> entry : overrides.entrySet()) {
+      str = str.replace("${" + entry.getKey() + "}", entry.getValue());
     }
-    for (String param : systemParams.keySet()) {
-      str = str.replaceAll("\\$\\{" + param + "\\}", systemParams.get(param));
+    for (Map.Entry<String, String> entry : systemParams.entrySet()) {
+      str = str.replace("${" + entry.getKey() + "}", entry.getValue());
     }
     return str;
   }
